<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/sort"
        android:orderInCategory="10"
        android:title="@string/sorter"
        yourapp:showAsAction="always">
        <menu
            android:menuCategory="container"
            android:orderInCategory="20">
            <item
                android:id="@+id/sort_clear"
                android:title="@string/clear_sort_created_at" />
            <item
                android:id="@+id/sort_name_asc"
                android:title="@string/by_name_asc" />
            <item
                android:id="@+id/sort_name_desc"
                android:title="@string/by_name_desc" />
        </menu>
    </item>

    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:orderInCategory="20"
        android:title="@string/menu_search"
        yourapp:showAsAction="always" />

</menu>