<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="187dp"
                android:layout_height="match_parent">

    <android.support.design.widget.TextInputEditText
        android:inputType="textEmailAddress"
        android:id="@+id/email_input_forgot_password"
        android:layout_marginLeft="@dimen/restore_password_edit_text_margin_left"
        android:layout_marginRight="@dimen/restore_password_edit_text_margin_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_reg"
        app:errorEnabled="true"/>

    <Button
        android:id="@+id/btn_cancel_forgot_password"
        style="@style/ForgotPasswordDialogButtonStyle"
        android:layout_toLeftOf="@+id/btn_send_forgot_password"
        android:layout_below="@+id/email_input_forgot_password"
        android:text="@string/button_cancel"
        />

    <Button
        android:id="@+id/btn_send_forgot_password"
        android:layout_alignParentRight="true"
        style="@style/ForgotPasswordDialogButtonStyle"
        android:layout_below="@+id/email_input_forgot_password"
        android:text="@string/send"
        />
</RelativeLayout>