<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="187dp"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgot_password_input_layout"
        android:layout_width="@dimen/login_element_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_element_horizontal_margin"
        android:layout_marginRight="@dimen/login_element_horizontal_margin"
        android:layout_marginTop="20dp"
        app:errorTextAppearance="@style/error_appearance"
        app:theme="@style/ForgotPassword">

        <EditText
            android:id="@+id/email_input_forgot_password"
            style="@style/EditTextForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_reg"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_cancel_forgot_password"
        style="@style/ForgotPasswordDialogButtonStyle"
        android:layout_below="@+id/forgot_password_input_layout"
        android:layout_toLeftOf="@+id/btn_send_forgot_password"
        android:text="@string/button_cancel" />

    <Button
        android:id="@+id/btn_send_forgot_password"
        style="@style/ForgotPasswordDialogButtonStyle"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/forgot_password_input_layout"
        android:text="@string/send" />
</RelativeLayout>