<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/block_registration"
    android:layout_marginBottom="@dimen/card_main_margin"
    android:layout_marginLeft="@dimen/card_main_margin"
    android:layout_marginRight="@dimen/card_main_margin"
    android:layout_marginTop="@dimen/card_top_margin"
    app:cardBackgroundColor="@color/colorNavyBlue"
    app:cardElevation="@dimen/card_elevation"
    app:cardMaxElevation="@dimen/max_card_elevation"
    app:contentPadding="@dimen/card_inner_padding"
    tools:showIn="@layout/activity_registration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_user_reg"
            android:layout_width="@dimen/usericon_size"
            android:layout_height="@dimen/usericon_size"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/cda_userpic_reg"
            android:scaleType="centerCrop"
            fresco:placeholderImage="@drawable/userpic"
            fresco:roundAsCircle="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_user_reg"
            android:textColorHint="@color/colorWhiteOpacity"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/EditErrorText"
            app:hintTextAppearance="@style/EditHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="@string/et_num_of_lines"
                android:textColor="@color/colorWhite"
                android:theme="@style/EditRegTextTheme"
                tools:hint="@string/email_reg"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_email_reg"
            android:textColorHint="@color/colorWhiteOpacity"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/EditErrorText"
            app:hintTextAppearance="@style/EditHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_pass_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="@string/et_num_of_lines"
                android:textColor="@color/colorWhite"
                android:theme="@style/EditRegTextTheme"
                tools:hint="@string/password_reg"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confpass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_pass_reg"
            android:textColorHint="@color/colorWhiteOpacity"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/EditErrorText"
            app:hintTextAppearance="@style/EditHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_confpass_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="@string/et_num_of_lines"
                android:textColor="@color/colorWhite"
                android:theme="@style/EditRegTextTheme"
                tools:hint="@string/conf_pass_reg"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_confpass_reg"
            android:textColorHint="@color/colorWhiteOpacity"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/EditErrorText"
            app:hintTextAppearance="@style/EditHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_name_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="@string/et_num_of_lines"
                android:textColor="@color/colorWhite"
                android:theme="@style/EditRegTextTheme"
                tools:hint="@string/full_name_reg"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_name_reg"
            android:textColorHint="@color/colorWhiteOpacity"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/EditErrorText"
            app:hintTextAppearance="@style/EditHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_phone_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:lines="@string/et_num_of_lines"
                android:maxLength="@string/et_phone_max_length"
                android:textColor="@color/colorWhite"
                android:theme="@style/EditRegTextTheme"
                tools:hint="@string/phone_reg"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_web_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_phone_reg"
            android:textColorHint="@color/colorWhiteOpacity"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/EditErrorText"
            app:hintTextAppearance="@style/EditHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_web_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="textWebEditText"
                android:lines="@string/et_num_of_lines"
                android:textColor="@color/colorWhite"
                android:theme="@style/EditRegTextTheme"
                tools:hint="@string/website_reg"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/fb_button_reg"
            style="@style/FBButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/til_web_reg"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/fb_button_text"
            android:textSize="@dimen/fb_btn_font_size"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/fb_button_reg"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/button_shape_signup"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/btn_font_size"/>

        <ProgressBar
            android:id="@+id/progressbar_reg"
            android:layout_width="@dimen/progressbar_size"
            android:layout_height="@dimen/progressbar_size"
            android:layout_below="@id/sign_up_button"
            android:layout_centerHorizontal="true"
            android:theme="@style/CustomProgressBar"
            android:visibility="gone"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>